--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background: url('./assets/background.png') no-repeat center center fixed;
+            background: url('https://aqua-glad-tern-369.mypinata.cloud/ipfs/bafybeigl5xhtf5zvyshzsakxh2ud2lsa35qznac6ml6woznbmw5crbvyn4') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
